# RbGB

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: docker-ci.yml  github-actions.yml  publish.yml  sem-ver-check.yml  waka.yml
src/: bus.rs  cpu.rs  ctc.rs  emulator.rs  graphics.rs  lib.rs  main.rs  mem.rs  registers.rs  sound.rs  types.rs
src/emulator/: cpu.rs  graphics.rs  joypad.rs  mem.rs
src/emulator/cpu/: registers.rs
src/sdl/: io.rs  mod.rs  screen.rs
tests/: test_cpu.rs  test_main.rs
