[package]
name = "rbgb"
version = "0.1.0"
edition = "2024"
authors = ["Noah Graf <noah@grafhome.net>"]


[lib]
name = "rbgb_emulator"
path = "src/lib.rs"

[[bin]]
name = "emulator_executable"
path = "src/main.rs"

[dependencies]
debug_print = "1.0.0"
lazy_static = "1.5.0"
sdl2 = {version = "0.37.0", features = ["bundled"] }
time = "0.3.41"

[dev-dependencies]
ntest = "0.9.3"

