[package]
name = "rbgb"
version = "0.2.0"
edition = "2024"
authors = ["Noah Graf <noah@grafhome.net>"]
description = "A basic and rough gameboy emulator"
license = "MIT"
repository = "https://github.com/ngraf3255/RbGB"
keywords = ["gamedev", "graphics", "emulator"]

[lib]
name = "rbgb"
path = "src/lib.rs"

[[bin]]
name = "rbgb"
path = "src/main.rs"
required-features = ["gui"]

[dependencies]
sdl2 = { version = "0.37.0", optional = true }

[features]
default = ["std", "gui"]
std = []
gui = ["std", "sdl2"]

# Easiest to bundle on windows since theres not a super easy way to install
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.37.0", features = ["bundled"], optional = true }

[dev-dependencies]
ntest = "0.9.3"
